feat: adicionado regra de negocio para divisao em caixa
